Added login structure for frameworks.
Co-Authored-By: Jorlindstrom <37301569+Jorlindstrom@users.noreply.github.com>
Co-Authored-By: nilsishome <181159296+nilsishome@users.noreply.github.com>

--- a/login/loginSelection.html
+++ b/login/loginSelection.html
@@ -20,10 +20,25 @@
       </div>
     </header>
 
-    <%- body %>
+    <!-- Bootstrap -->
+    <div class="loginButtons">
+      <a href="/login/bootstrap" class="loginButtons__button">
+        Logga in med Bootstrap
+      </a>
+  
+      <!-- Tailwind -->
+      <a href="/login/tailwind" class="loginButtons__button">
+        Logga in med Tailwind
+      </a>
+      
+      <!-- Material -->
+      <a href="/login/material" class="loginButtons__button">
+        Logga in med Material
+      </a>
+    </div>
+  
 
     <!-- Footer -->
     <footer class="footer"></footer>
-
   </body>
 </html>
