--- a/profile/profileSelection.html
+++ b/profile/profileSelection.html
@@ -20,10 +20,27 @@
       </div>
     </header>
 
-    <%- body %>
+    <h1 class="profileSelectionHeader">Välkommen förnamn!</h1>
+
+    <!-- Bootstrap -->
+    <div class="loginButtons">
+      <a href="/profile/bootstrap" class="loginButtons__button">
+        Kolla din profil med Bootstrap
+      </a>
+  
+      <!-- Tailwind -->
+      <a href="/profile/tailwind" class="loginButtons__button">
+        Kolla din profil med Tailwind
+      </a>
+      
+      <!-- Material -->
+      <a href="/profile/material" class="loginButtons__button">
+        Kolla din profil med Material
+      </a>
+    </div>
+  
 
     <!-- Footer -->
     <footer class="footer"></footer>
-
   </body>
 </html>
