--- a/login/tailwind.html
+++ b/login/tailwind.html
@@ -20,10 +20,30 @@
       </div>
     </header>
 
-    <%- body %>
+    <form id="loginForm">
+        <h1>Logga in eller bli medlem</h1>
+        
+        <label>
+          Användarnamn
+          <input type="text" id="usernameLogin" name="Användarnamn" required></input>
+        </label>
+
+        <label>
+          Lösenord
+          <input type="password" id="passwordLogin" name="Lösenord" required></input>
+        </label>
+        <p class="loginWarning"></p>
+
+        <a>Har du glömt ditt lösenord?</a>
+
+        <button id="login" type="submit">Logga in</button>
+
+        <a href="/signup/tailwind">Bli medlem</a>
+
+        <a>Avbryt</a>
+    </form>
 
     <!-- Footer -->
     <footer class="footer"></footer>
-
   </body>
 </html>
