show password removal (not needed)
Co-Authored-By: Jorlindstrom <37301569+Jorlindstrom@users.noreply.github.com>
Co-Authored-By: nilsishome <181159296+nilsishome@users.noreply.github.com>

--- a/profile/bootstrap.html
+++ b/profile/bootstrap.html
@@ -20,6 +20,8 @@
       </div>
     </header>
 
+    <h1>Profil</h1>
+
     <div id="profileDiv">
       <label>
         Användarnamn
@@ -49,8 +51,6 @@
         Lösenord 
 
         <p id="passwordProfile">Change me</p>
-
-        <button>Visa lösenord</button>
       </label>
     </div>
 
