--- a/profile/tailwind.html
+++ b/profile/tailwind.html
@@ -20,6 +20,8 @@
       </div>
     </header>
 
+    <h1>Profil</h1>
+
     <div id="profileDiv">
       <label>
         Användarnamn
@@ -49,8 +51,6 @@
         Lösenord 
 
         <p id="passwordProfile">Change me</p>
-
-        <button>Visa lösenord</button>
       </label>
     </div>
 
