--- a/login/bootstrap.html
+++ b/login/bootstrap.html
@@ -2,46 +2,89 @@
 <html lang="sv">
   <head>
     <title>Retro - biografen som visar filmer från förr -</title>
-    <meta name="description" content="Retro biografen ligger i västerås och visar filmer från förr"/>
-    <meta name="keywords" content="Biograf,retro, 50-tal, 70-tal, 80-tal, 90-tal, 00-tal, Västerås"/>
+    <meta
+      name="description"
+      content="Retro biografen ligger i västerås och visar filmer från förr"
+    />
+    <meta
+      name="keywords"
+      content="Biograf,retro, 50-tal, 70-tal, 80-tal, 90-tal, 00-tal, Västerås"
+    />
     <meta name="robots" content="index, follow" />
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" type="text/css" href="/static/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/static/js/main.js" defer></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
       <div class="header__container">
-        <a href="/login" class="loginBtn">
-          Login
-        </a>
+        <a href="/login" class="loginBtn"> Login </a>
       </div>
     </header>
 
-    <form id="loginForm">
-        <h1>Logga in eller bli medlem</h1>
+    <form class="text-bg-info-subtle bg-gradient pt-3 pb-4" id="loginForm">
+      <h1 class="mb-3 text-center">Logga in eller bli medlem</h1>
 
-        <label>
-          Användarnamn
-          <input type="text" id="usernameLogin" name="Användarnamn" required></input>
-        </label>
+      <div class="bg-secondary w-25 p-3 rounded-4 ms-3">
+        <div class="mb-3">
+          <label class="form-label">
+            Användarnamn
+            <input
+              class="form-control"
+              type="text"
+              id="usernameLogin"
+              name="Användarnamn"
+              required
+            />
+          </label>
+        </div>
 
-        <label>
-          Lösenord
-          <input type="password" id="passwordLogin" name="Lösenord" required></input>
-        </label>
+        <div class="mb-5">
+          <label class="form-label">
+            Lösenord
+            <input
+              class="form-control"
+              type="password"
+              id="passwordLogin"
+              name="Lösenord"
+              required
+            />
+          </label>
+        </div>
 
-        <p class="loginWarning"></p>
+        <p class="loginWarning text-warning"></p>
 
-        <a>Har du glömt ditt lösenord?</a>
+        <a class="pe-none p-1 bg-light text-decoration-underline rounded-1"
+          >Har du glömt ditt lösenord?</a
+        >
 
-        <button id="login" type="submit">Logga in</button>
+        <div class="d-block">
+          <button class="btn btn-primary mt-3" id="login" type="submit">
+            Logga in
+          </button>
 
-        <a href="/signup/bootstrap">Bli medlem</a>
+          <a class="btn btn-light mt-3" href="/signup/bootstrap">Bli medlem</a>
+        </div>
+      </div>
 
-        <a>Avbryt</a>
+      <a class="pe-none btn btn-danger d-block mt-4 ms-1 me-1">Avbryt</a>
     </form>
 
     <!-- Footer -->
